--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "visio-soft/support",
+    "name": "visio/support",
     "description": "FilamentPHP 3 plugin for partner support ticket system",
     "type": "library",
     "license": "MIT",
@@ -13,7 +13,7 @@
         "php": "^8.2",
         "filament/filament": "^3.0",
         "illuminate/contracts": "^11.0|^12.0",
-        "spatie/laravel-package-tools": "^1.16"
+        "illuminate/support": "^11.0|^12.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
